--- a/Application/Forum/View/default/Widget/homeblock.html
+++ b/Application/Forum/View/default/Widget/homeblock.html
@@ -5,7 +5,7 @@
                 <div style="margin:0 -10px;">
                     <div class="col-xs-9">
                         <div>
-							<h2>{:modC('FORUM_POST_SHOW_TITLE', '热门帖子', 'Forum')}
+							<h2>热门帖子
 							</h2>
 
 							<div>
@@ -58,8 +58,7 @@
                     </div>
                     <div class="col-xs-3">
                         <div>
-                            <h2>{:modC('FORUM_SHOW_TITLE', '贴吧', 'Forum')}</h2>
-
+                            <h2>贴吧</h2>
                             <div class="clearfix position-forums">
                                 <volist name="forum_show" id="vo">
                                     <div class="clearfix">
