--- a/Application/Common/View/default/Public/header.html
+++ b/Application/Common/View/default/Public/header.html
@@ -20,7 +20,7 @@
                 $logo = $logo?$logo:'__ROOT__/Public/images/logo.png';
             </php>
 
-            <a class="navbar-brand logo" href="{:U('Home/Index/index')}"><img src="{$logo}"/></a>
+            <a class="navbar-brand logo" href="{:U('Home/Index/index')}">Internship Tour</a>
             <div class="" id="nav_bar_main">
 
                 <ul class="nav navbar-nav navbar-left">
