--- a/Application/News/View/default/Widget/homeblock.html
+++ b/Application/News/View/default/Widget/homeblock.html
@@ -26,8 +26,8 @@
 										</h3>
 									</div>
 									<div>
-										作者：<span class="author"><a href="{$data.user.space_url}"
-											ucard="{$data.uid}">{$data.user.nickname}</a>&nbsp;&nbsp;{$data.create_time|date='Y-m-d
+										作者：<span class="author"><a
+											href="{$data.user.space_url}" ucard="{$data.uid}">{$data.user.nickname}</a>&nbsp;&nbsp;{$data.create_time|date='Y-m-d
 											H:i:s',###}</span>
 
 										<p>
@@ -45,8 +45,8 @@
 										</h3>
 									</div>
 									<div>
-										作者：<span class="author"><a href="{$data.user.space_url}"
-											ucard="{$data.uid}">{$data.user.nickname}</a>&nbsp;&nbsp;{$data.create_time|date='Y-m-d
+										作者：<span class="author"><a
+											href="{$data.user.space_url}" ucard="{$data.uid}">{$data.user.nickname}</a>&nbsp;&nbsp;{$data.create_time|date='Y-m-d
 											H:i:s',###}</span>
 
 										<p>
