--- a/Application/Forum/View/default/Index/lists.html
+++ b/Application/Forum/View/default/Index/lists.html
@@ -45,9 +45,9 @@
                                                     </div>
                                                     <div class=" body">
                                                         <div class="margin_bottom_10">
-                                                            {:L('subject')}：<a
+                                                            {:L('_SUBJECT_')}：<a
                                                                 href="{:U('forum/index/forum',array('id'=>$f['id']))}">{$f.topic_count}</a>
-                                                            &nbsp;&nbsp; {:L('post')}：<a
+                                                            &nbsp;&nbsp; {:L('_POST_')}：<a
                                                                 href="{:U('forum/index/forum',array('id'=>$f['id']))}">{$f.total_count}</a>
 
                                                         </div>
