--- a/Application/Forum/View/default/Widget/LZLReply.html
+++ b/Application/Forum/View/default/Widget/LZLReply.html
@@ -8,7 +8,7 @@
 <div class="clearfix"></div>
     <if condition="check_auth('Forum/Lzl/doSendLZLReply',get_expect_ids(0,$reply['id'],0,1))">
     <div>
-    <a href="javascript:" class="pull-right show_textarea" args="{$to_f_reply_id}" >{:L('say_up')}</a>
+    <a href="javascript:" class="pull-right show_textarea" args="{$to_f_reply_id}" >{:L('_SAY_UP_')}</a>
     </div>
     <div id="show_textarea_{$to_f_reply_id}" <neq name="count" value="0" >style="display: none"</neq>>
     <div id="myavatar_{$to_f_reply_id}"  class="XT_my_avatar">
@@ -17,10 +17,10 @@
     <div id="textarea_{$to_f_reply_id}" style="margin-left: 50px;">
         <textarea  id="reply_{$to_f_reply_id}" tip="1" args="{$to_f_reply_id}"  class="input_tips" style="overflow-y: hidden;"></textarea>
     </div>
-    <div class="XT_submit"><a id="submit_{$to_f_reply_id}" href="javascript:" post_id="{$post_id}" args="to_f_reply_id={$to_f_reply_id}&to_reply_id=0&to_uid={$reply_uid}&p={$p}" class="submitReply pull-right btn btn-primary">{:L('submit_ctrl_enter')}</a></div>
+    <div class="XT_submit"><a id="submit_{$to_f_reply_id}" href="javascript:" post_id="{$post_id}" args="to_f_reply_id={$to_f_reply_id}&to_reply_id=0&to_uid={$reply_uid}&p={$p}" class="submitReply pull-right btn btn-primary">{:L('_SUBMIT_CTRL_ENTER_')}</a></div>
 </div>
 <else/>
-<a class="pull-right show_textarea" href="javascript:" onclick=" if(is_login()){toast.error({:L('error_no_authority')});}else{toast.error({:L('error_please_login')});}">{:L('say_up')}</a>
+<a class="pull-right show_textarea" href="javascript:" onclick=" if(is_login()){toast.error({:L('_ERROR_NO_AUTHORITY_')});}else{toast.error({:L('_ERROR_PLEASE_LOGIN_')});}">{:L('_SAY_UP_')}</a>
         </if>
 </div>
 
