--- a/Application/Forum/View/default/Widget/hot.html
+++ b/Application/Forum/View/default/Widget/hot.html
@@ -1,7 +1,7 @@
 <neq name="posts" value="">
     <div class="hot_post common_block_border" style="margin-top: 10px">
         <div class="row common_block_title">
-           {:L('discuss_hot')}
+           {:L('_DISCUSS_HOT_')}
         </div>
         <dl>
             <volist name="posts" id="post">
