--- a/Application/Forum/View/default/Forum/type.html
+++ b/Application/Forum/View/default/Forum/type.html
@@ -4,7 +4,7 @@
     <!-- 标题 -->
     <div class="main-title">
         <h2>
-            {:L('forum_category_board_manage')}
+            {:L('_FORUM_CATEGORY_BOARD_MANAGE_')}
         </h2>
     </div>
 
@@ -16,29 +16,29 @@
                 <a href="{:U('Admin/Forum/addtype')}" class="btn" style="margin-right:5px;">新增</a></div>
             <div class="category">
                 <div class="hd clearfix">
-                    <div class="fold">{:L('fold')}</div>
-                    <div class="order">{:L('sort')}</div>
-                    <div class="name">{:L('name')}</div>
+                    <div class="fold">{:L('_FOLD_')}</div>
+                    <div class="order">{:L('_SORT_')}</div>
+                    <div class="name">{:L('_NAME_')}</div>
                 </div>
                 <volist name="list" id="vo">
                     <dl class="cate-item">
                         <dt class="clearfix">
                         <form action="{:U('Admin/Forum/addtype')}" method="post">
                             <div class="btn-toolbar opt-btn clearfix">
-                                <a title="{:L('edit')}" href="{:U('Admin/Forum/addtype',array('id'=>$vo['id'],'pid'=>0))}">
-                                    {:L('edit')}
+                                <a title="{:L('_EDIT_')}" href="{:U('Admin/Forum/addtype',array('id'=>$vo['id'],'pid'=>0))}">
+                                    {:L('_EDIT_')}
                                 </a>
                                 <eq name="vo.status" value="1">
-                                    <a title="{:L('disable')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>0))}" class="ajax-get">
-                                        {:L('disable')}
+                                    <a title="{:L('_DISABLE_')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>0))}" class="ajax-get">
+                                        {:L('_DISABLE_')}
                                     </a>
                                     <else/>
-                                    <a title="{:L('enable')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>1))}" class="ajax-get">
-                                        {:L('enable')}
+                                    <a title="{:L('_ENABLE_')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>1))}" class="ajax-get">
+                                        {:L('_ENABLE_')}
                                     </a>
                                 </eq>
-                                <a title="{:L('delete')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>-1))}" class="confirm ajax-get">
-                                    {:L('delete')}
+                                <a title="{:L('_DELETE_')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>-1))}" class="confirm ajax-get">
+                                    {:L('_DELETE_')}
                                 </a>
                             </div>
                             <div class="fold"><i class="icon-unfold"></i></div>
@@ -50,7 +50,7 @@
                                 <span class="tab-sign"></span>
                                 <input type="hidden" name="id" value="{$vo.id}">
                                 <input type="text" name="title" class="form-control text" style="width: 200px;display: inline-block" value="{$vo.title}">
-                                <a class="add-sub-cate" title="{:L('board_add')}" href="{:U('Admin/Forum/editForum',array('type_id'=>$vo['id']))}">
+                                <a class="add-sub-cate" title="{:L('_BOARD_ADD_')}" href="{:U('Admin/Forum/editForum',array('type_id'=>$vo['id']))}">
                                     <i class="icon-plus"></i>
                                 </a>
                                 <span class="help-inline msg"></span>
@@ -64,20 +64,20 @@
                                         <dt class="clearfix">
                                         <form action="{:U('Admin/Forum/editForum')}" method="post">
                                             <div class="btn-toolbar opt-btn clearfix">
-                                                <a title="{:L('edit')}" href="{:U('Admin/Forum/addtype',array('id'=>$vo['id'],'pid'=>0))}">
-                                                    {:L('edit')}
+                                                <a title="{:L('_EDIT_')}" href="{:U('Admin/Forum/addtype',array('id'=>$vo['id'],'pid'=>0))}">
+                                                    {:L('_EDIT_')}
                                                 </a>
                                                 <eq name="vo.status" value="1">
-                                                    <a title="{:L('disable')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>0))}" class="ajax-get">
-                                                        {:L('disable')}
+                                                    <a title="{:L('_DISABLE_')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>0))}" class="ajax-get">
+                                                        {:L('_DISABLE_')}
                                                     </a>
                                                     <else/>
-                                                    <a title="{:L('enable')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>1))}" class="ajax-get">
-                                                        {:L('enable')}
+                                                    <a title="{:L('_ENABLE_')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>1))}" class="ajax-get">
+                                                        {:L('_ENABLE_')}
                                                     </a>
                                                 </eq>
-                                                <a title="{:L('delete')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>-1))}" class="confirm ajax-get">
-                                                    {:L('delete')}
+                                                <a title="{:L('_DELETE_')}" href="{:U('Admin/Forum/setTypeStatus',array('ids'=>$vo['id'],'status'=>-1))}" class="confirm ajax-get">
+                                                    {:L('_DELETE_')}
                                                 </a>
                                             </div>
                                             <div class="fold"><i></i></div>
