--- a/Application/Forum/View/default/Index/editreply.html
+++ b/Application/Forum/View/default/Index/editreply.html
@@ -5,7 +5,7 @@
 
         <div class="col-xs-12">
             <h4>
-                {:L('comment_edit')}
+                {:L('_COMMENT_EDIT_')}
             </h4>
             <hr/>
             <section id="contents">
@@ -21,7 +21,7 @@
                     <p class="pull-right">
                         <button type="submit" class="btn btn-large btn-primary" id="submit-button">
                             <span class="glyphicon glyphicon-edit"></span>
-                            {:L('comment_edit')}
+                            {:L('_COMMENT_EDIT_')}
                         </button>
                     </p>
                 </form>
@@ -78,7 +78,7 @@
             }
 
             function showSubmitting() {
-                $('#submit-button').attr('class','btn btn-primary disabled').text("{:L('submitting')}");
+                $('#submit-button').attr('class','btn btn-primary disabled').text("{:L('_SUBMITTING_')}");
             }
         })
     </script>
