--- a/Application/Forum/View/default/Index/look.html
+++ b/Application/Forum/View/default/Index/look.html
@@ -3,7 +3,7 @@
     <div>
         <div class="with-padding margin-bottom-15 margin-top-15">
             <button onclick="rand()" class="btn btn-default btn-block btn-lg">
-                <i class="icon-refresh"></i> {:L('c_c')}
+                <i class="icon-refresh"></i> {:L('_C_C_')}
             </button>
         </div>
 
