--- a/Application/Forum/View/default/Index/profile_content.html
+++ b/Application/Forum/View/default/Index/profile_content.html
@@ -5,10 +5,10 @@
             <ul class="nav nav-pills ucenter-tab">
                 <li
                 <eq name="tab" value="forum"> class="uc_current"</eq>
-                ><a href="{:U('appList',array('type'=>$type,'uid'=>$uid,'tab'=>'forum'))}">{:L('publish_de')}</a></li>
+                ><a href="{:U('appList',array('type'=>$type,'uid'=>$uid,'tab'=>'forum'))}">{:L('_PUBLISH_DE_')}</a></li>
                 <li
                 <eq name="tab" value="forum_in"> class="uc_current"</eq>
-                ><a href="{:U('appList',array('type'=>$type,'uid'=>$uid,'tab'=>'forum_in'))}">{:L('part_in_de')}</a></li>
+                ><a href="{:U('appList',array('type'=>$type,'uid'=>$uid,'tab'=>'forum_in'))}">{:L('_PART_IN_DE_')}</a></li>
             </ul>
 
         </div>
@@ -18,7 +18,7 @@
             <div class="col-xs-12">
                 <p class="text-muted" style="text-align: center; font-size: 3em;">
                     <br/><br/>
-                    {:L('tip_not_post_now')}
+                    {:L('_TIP_NOT_POST_NOW_')}
                     <br/><br/><br/>
                 </p>
             </div>
@@ -45,23 +45,23 @@
                         class="forum-list-title-link" title="{$document.title|htmlspecialchars}"
                         href="{:U('Forum/Index/detail',array('id'=>$document['id']))}" target="_blank">{$document.title|htmlspecialchars|mb_substr=0,30,'utf-8'}
                 </a>
-                    <eq name="document.is_top" value="2"><i class="post_top">{:L('all_site')}</i>
+                    <eq name="document.is_top" value="2"><i class="post_top">{:L('_ALL_SITE_')}</i>
                         <else/>
-                        <eq name="document.is_top" value="1"><i class="post_top_forum">{:L('section')}</i></eq>
+                        <eq name="document.is_top" value="1"><i class="post_top_forum">{:L('_SECTION_')}</i></eq>
                     </eq>
 
 
                 </p>
 
                 <p class="pull-right text-muted">
-                    <span>{:L('read')}（{$document.view_count}）</span>
+                    <span>{:L('_READ_')}（{$document.view_count}）</span>
                     <span style="width: 1em; display: inline-block;">&nbsp;</span>
-                    <span>{:L('reply')}（{$document.reply_count}）</span>
+                    <span>{:L('_REPLY_')}（{$document.reply_count}）</span>
                 </p>
 
                 <p class="text-muted author">
                     <a href="{$user.space_url}" ucard="{$user.uid}">{$user.nickname|op_t}</a>
-                    {:L('publish')}：{$document.create_time|friendlyDate}
+                    {:L('_PUBLISH_')}：{$document.create_time|friendlyDate}
 
                 </p>
             </div>
