--- a/Application/Forum/View/default/Index/search.html
+++ b/Application/Forum/View/default/Index/search.html
@@ -2,7 +2,7 @@
 
 <block name="body">
     <div class="row common_block_border">
-        <div class="common_block_title">{:L('search_result_keyword')} <span style="color: red">{$_REQUEST.keywords}</span></div>
+        <div class="common_block_title">{:L('_SEARCH_RESULT_KEYWORD_')} <span style="color: red">{$_REQUEST.keywords}</span></div>
         <div class="col-xs-12">
             <section id="contents">
                 <if condition="!$list">
@@ -10,7 +10,7 @@
                         <div class="col-xs-12">
                             <p class="text-muted" style="text-align: center; font-size: 3em;">
                                 <br/><br/>
-                                {:L('post_no_now')}
+                                {:L('_POST_NO_NOW_')}
                                 <br/><br/><br/>
                             </p>
                         </div>
@@ -35,22 +35,22 @@
                                 <a class="forum-list-title-link" title="{$vo.title|text}"
                                    href="{:U('Index/detail',array('id'=>$vo['id']))}">{$vo.colored_title}
                                 </a>
-                                <eq name="document.is_top" value="2"><span class="label label-badge label-danger">{:L('all_site')}</span>
+                                <eq name="document.is_top" value="2"><span class="label label-badge label-danger">{:L('_ALL_SITE_')}</span>
                                     <else/>
-                                    <eq name="document.is_top" value="1"><span class="label label-badge label-info">{:L('section')}</span></eq>
+                                    <eq name="document.is_top" value="1"><span class="label label-badge label-info">{:L('_SECTION_')}</span></eq>
                                 </eq>
                             </p>
 
                             <p class="pull-right text-muted">
-                                <span>{:L('read')}（{$vo.view_count}）</span>
+                                <span>{:L('_READ_')}（{$vo.view_count}）</span>
                                 <span style="width: 1em; display: inline-block;">&nbsp;</span>
-                                <span>{:L('reply')}（{$vo.reply_count}）</span>
+                                <span>{:L('_REPLY_')}（{$vo.reply_count}）</span>
                             </p>
 
                             <p class="text-muted author">
                                 <a href="{$user.space_url}" ucard="{$user.uid}">{$user.nickname|op_t}</a>
-                                {:L('release')}：{$vo.create_time|friendlyDate} |
-                                {:L('reply')}：{$vo.last_reply_time|friendlyDate}
+                                {:L('_RELEASE_')}：{$vo.create_time|friendlyDate} |
+                                {:L('_REPLY_')}：{$vo.last_reply_time|friendlyDate}
                             </p>
                         </div>
                     </div>
