--- a/Application/Forum/View/default/Public/_nav.html
+++ b/Application/Forum/View/default/Public/_nav.html
@@ -5,13 +5,13 @@
 
     <nav class="navbar navbar-default" >
         <div class="container"  style="width:1180px;">
-            <a class="navbar-brand logo" href="{:U('Forum/Index/index')}"><i class="icon-comments"></i> {:L('module')}</a>
+            <a class="navbar-brand logo" href="{:U('Forum/Index/index')}"><i class="icon-comments"></i> {:L('_MODULE_')}</a>
             <ul class="nav navbar-nav navbar-left">
                 <li id="tab_index">
-                    <a href="{:U('Forum/Index/index')}">{:L('home')}</a>
+                    <a href="{:U('Forum/Index/index')}">{:L('_HOME_')}</a>
                 </li>
-                <li id="tab_lists"><a href="{:U('forum/index/lists')}">{:L('belonged_section')}</a></li>
-                <li id="tab_look"><a href="{:U('forum/index/look')}">{:L('having_a_look')}</a></li>
+                <li id="tab_lists"><a href="{:U('forum/index/lists')}">{:L('_BELONGED_SECTION_')}</a></li>
+                <li id="tab_look"><a href="{:U('forum/index/look')}">{:L('_HAVING_A_LOOK_')}</a></li>
                 <!--<li><a>我的版块</a></li>-->
             </ul>
             <script>
@@ -21,7 +21,7 @@
                   role="search">
                 <div class="search-input-group">
                     <a type="submit" class="input-btn"><i class="icon-search"></i> </a>
-                    <input type="text" name="keywords" class="input" placeholder="{:L('search')}">
+                    <input type="text" name="keywords" class="input" placeholder="{:L('_SEARCH_')}">
                 </div>
                 </span>
             </form>
