--- a/Application/Forum/View/default/Public/post-item.html
+++ b/Application/Forum/View/default/Public/post-item.html
@@ -16,22 +16,22 @@
             <a class="forum-list-title-link" title="{$vo.title|text}"
                href="{:U('Index/detail',array('id'=>$vo['id']))}">{$vo.title|htmlspecialchars|mb_substr=0,30,'utf-8'}
             </a>
-            <eq name="document.is_top" value="2"><span class="label label-badge label-danger">{:L('all_site')}</span>
+            <eq name="document.is_top" value="2"><span class="label label-badge label-danger">{:L('_ALL_SITE_')}</span>
                 <else/>
-                <eq name="document.is_top" value="1"><span class="label label-badge label-info">{:L('section')}</span></eq>
+                <eq name="document.is_top" value="1"><span class="label label-badge label-info">{:L('_SECTION_')}</span></eq>
             </eq>
         </p>
 
         <p class="pull-right text-muted">
-            <span>{:L('read')}（{$vo.view_count}）</span>
+            <span>{:L('_READ_')}（{$vo.view_count}）</span>
             <span style="width: 1em; display: inline-block;">&nbsp;</span>
-            <span>{:L('reply')}（{$vo.reply_count}）</span>
+            <span>{:L('_REPLY_')}（{$vo.reply_count}）</span>
         </p>
 
         <p class="text-muted author">
             <a href="{$user.space_url}" ucard="{$user.uid}">{$user.nickname|op_t}</a>
-            {:L('publish')}：{$vo.create_time|friendlyDate} |
-            {:L('reply')}：{$vo.last_reply_time|friendlyDate}
+            {:L('_PUBLISH_')}：{$vo.create_time|friendlyDate} |
+            {:L('_REPLY_')}：{$vo.last_reply_time|friendlyDate}
         </p>
     </div>
 </div>
