--- a/Application/Admin/View/default/Travel/index.html
+++ b/Application/Admin/View/default/Travel/index.html
@@ -40,6 +40,7 @@
 				<th>行程描述</th>
 				<th>状态</th>
 				<th>添加时间</th>
+				<th>更新时间</th>
 				<th>操作</th>
 			</tr>
 			</tr>
@@ -53,15 +54,16 @@
 				<td>{$travel.username.nickname}</td>
 				<td>{$travel.travelRoute.road_name}</td>
 				<td>{$travel.travelRoute.start}->{$travel.travelRoute.end}</td>
-				<td>{$travel.travelRoute.content}</td>
+				<td>{$travel.content}</td>
 				<td>
-				<if condition="$travel.travelRoute.status eq 0">启程
-				<elseif condition="$travel.travelRoute.status eq 1" />途中
+				<if condition="$travel.status eq 0">启程
+				<elseif condition="$travel.status eq 1" />途中
 				<else/>抵达
 				</if>
 				</td>
 				<td>{$travel.travelRoute.add_time|time_format}</td>
-				<td><a href="{:U('edit?id='.$travel['id'])}" >修改</a></td>
+				<td>{$travel.travelRoute.flush_time|time_format}</td>
+				<td><a href="{:U('edit?id='.$travel['id'])}" >查看详情</a></td>
 			</tr>
 			</volist> <else />
 			<td colspan="7" class="text-center">aOh! 暂时还没有内容!</td>
